crates/nargo_cli/tests/compile_tests_data/fail/unsupported-cast.nr
struct A {}

fn main() {
    println!("{:?}", 42.0 as A);
}
